@@ -1,4 +1,9 @@
-$Id: ChangeLog,v 1.24 2004/03/25 19:30:12 h_oudejans Exp $
+$Id: ChangeLog,v 1.25 2004/03/26 20:02:04 h_oudejans Exp $
+
+2004-03-27 Herman Oudejans <hn.oudejans@quicknet.nl>
+	* Catapult now sends update enable commands to openmsx
+	* Firmware button only available if firmware available on the 
+	   current machine
 
 2004-03-26 Herman Oudejans <hn.oudejans@quicknet.nl>
 	* Updates for audiocontrol on openmsx now result in update
